crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__config_recovery_4.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"{a = {a = 1\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "a",
                                                filename: "",
                                                line: 1,
                                                column: 1,
                                                end_line: 1,
                                                end_column: 2,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 2,
                            },
                        ),
                        value: Node {
                            node: Config(
                                ConfigExpr {
                                    items: [
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Identifier(
                                                            Identifier {
                                                                names: [
                                                                    Node {
                                                                        node: "a",
                                                                        filename: "",
                                                                        line: 1,
                                                                        column: 6,
                                                                        end_line: 1,
                                                                        end_column: 7,
                                                                    },
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 6,
                                                        end_line: 1,
                                                        end_column: 7,
                                                    },
                                                ),
                                                value: Node {
                                                    node: NumberLit(
                                                        NumberLit {
                                                            binary_suffix: None,
                                                            value: Int(
                                                                1,
                                                            ),
                                                        },
                                                    ),
                                                    filename: "",
                                                    line: 1,
                                                    column: 10,
                                                    end_line: 1,
                                                    end_column: 11,
                                                },
                                                operation: Override,
                                                is_shorthand: false,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 6,
                                            end_line: 1,
                                            end_column: 11,
                                        },
                                    ],
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 5,
                            end_line: 1,
                            end_column: 11,
                        },
                        operation: Override,
                        is_shorthand: false,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 11,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 11,
}
